<resources>
    <string name="app_name">FrameworkDemo</string>

    <string name="appwidget_text">武汉天气</string>


    <string name="back_title">BACK</string>
    <string name="buffering">Buffering</string>

    <string name="play_setting">播放设置</string>
    <string name="decode_config">解码配置</string>
    <string name="sw_decode">软件解码</string>
    <string name="hw_decode">硬件解码</string>
    <string name="dlg_ok">OK</string>
    <string name="dlg_cancel">Cancel</string>

    <string name="pls_choose_activity">[请选择测试 Activity]:</string>
    <string name="pls_choose_videopath">[输入或选择视频地址]:</string>
    <string name="input_video_path">手动输入测试视频地址</string>
    <string name="btn_local_file">本地文件</string>
    <string name="btn_play_setting">播放配置</string>
    <string name="btn_click_play">点击播放</string>

    <string name="btn_start">开始</string>
    <string name="btn_pause">暂停</string>
    <string name="btn_resume">继续</string>
    <string name="btn_stop">停止</string>

    <string name="marquee_text">一个集美貌与才华于一身的程序猿！</string>
    <string name="marquee_texts">一个集美貌与才华于一身的程序猿！一个集美貌与才华于一身的程序猿！一个集美貌与才华于一身的程序猿！一个集美貌与才华于一身的程序猿！</string>

    <string name="wrap_type_json">"{\"int1\":null,\"int2\":null,\"int3\":\"null\",\"int4\":\"null\",\"name\":\"meikai\"}"</string>

    <string name="constraint_layout_tip">layout_constraint[本源]_[目标]="[目标ID]\nmarginLeft等需要结合constraint
        一起使用，否则不知道Left是谁，也就无法应用marginLeft\n
        layout_constraintHorizontal_bias 设置距离左边锚点和右边锚点的距离比例，垂直方向类似\n
        Guideline 写宽度没有意义，也不会被draw，但是有layout位置的，仅用于被当作一个锚点\n
        layout_constraintDimensionRatio 宽度比，支持比例和小数，同样需要指定至少一个锚点
        "</string>

</resources>
